@@ -3,15 +3,15 @@
 
 #define PASS_CFEQ(expression, expect, message) \
   { \
-    PASS(CFEqual((CFTypeRef)expression, (CFTypeRef)expect) ? YES : NO, message)\
+    PASS(CFEqual((CFTypeRef)(expression), (CFTypeRef)(expect)) ? YES : NO, message)\
     if (NO == testPassed) \
       { \
         CFStringRef str1; \
         CFStringRef str2; \
-        char expected[BUFFER_SIZE]; \
-        char expr[BUFFER_SIZE]; \
-        str1 = CFCopyDescription((CFTypeRef)expect); \
-        str2 = CFCopyDescription((CFTypeRef)expression); \
+        char expected[BUFFER_SIZE] = {0}; \
+        char expr[BUFFER_SIZE] = {0}; \
+        str1 = CFCopyDescription((CFTypeRef)(expect)); \
+        str2 = CFCopyDescription((CFTypeRef)(expression)); \
         CFStringGetCString (str1, expected, BUFFER_SIZE-1, \
           CFStringGetSystemEncoding()); \
         CFStringGetCString (str2, expr, BUFFER_SIZE-1, \
